--- a/app/views/investments/new.html.erb
+++ b/app/views/investments/new.html.erb
@@ -1,5 +1,14 @@
-<h1> New Investment </h1>
+<div class="container">
 
+	<div class="row">
+		<div class="col-md-12">
+			<br/>
+			<h2 class="text-center">so you want to buy some stuff...</h2><br/><br/>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-md-12">
 <%= form_for( @investment ) do |f| %>
 
 <% if @investment.errors.any? %>
@@ -13,19 +22,24 @@
         </ul>
 </div>
 <% end %>
+		</div>
+	</div>
 
 <div class="form-group">
-        <%= f.label "Item Name" %>
-        <%= f.text_field :itemName, class: 'form-control' %>
+        <h1 class="text-center"><%= f.label "What do you want to buy?" %></h1><br/>
+		<h1 class="text-center"><%= f.text_field :itemName %>
+		</h1>
+        <br/><br/><br/>
 </div>
+
 <div class="form-group">
-        <%= f.label "Purchase Amount" %>
-        <%= f.text_area :purchaseAmount, class: 'form-control', rows: '1' %>
+        <h1 class="text-center"><%= f.label "how much does it cost?" %></h1>
+        <h1 class="text-center"><%= label_tag('$') %> <%= f.text_area :purchaseAmount, rows: '1' %></h1><br/>
 </div>
 
-<div class="form-group">
-        <%= f.submit class: 'btn btn-primary' %>
-
+<div class="form-group text-center">
+        <%= f.submit("convince me!", class: 'btn btn-primary') %>
 </div>
 
 <% end %>
+</div>
