--- a/app/views/investments/new.html.erb
+++ b/app/views/investments/new.html.erb
@@ -33,8 +33,8 @@
 </div>
 
 <div class="form-group">
-        <h1 class="text-center"><%= f.label "how much does it cost?" %></h1>
-        <h1 class="text-center"><%= label_tag('$') %> <%= f.text_area :purchaseAmount, rows: '1' %></h1><br/>
+        <h1 class="text-center"><%= f.label "what is the cost?" %></h1>
+        <h1 class="text-center"><%= label_tag('$') %> <%= f.text_field :purchaseAmount, rows: '1' %></h1><br/>
 </div>
 
 <div class="form-group text-center">
